--- a/web/layouts/sistema-candidato/cabecalho.phtml
+++ b/web/layouts/sistema-candidato/cabecalho.phtml
@@ -6,20 +6,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ce211dcce0.js" crossorigin="anonymous"></script>
-    <link href="/assets/css/sistema.css" rel="stylesheet" />
+    <link href="/assets/css/sistema.css" rel="stylesheet"/>
+
 </head>
 
-<body  class="d-flex justify-content-center flex-column min-vh-100">
+<body class="d-flex flex-column min-vh-100">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
     <div class="container-fluid">
         <a class="navbar-brand logo" href="/candidato/login"></a>
         <div class="navbar-text">
-            <?php if (CandidatoController::estaLogado()): ?>
-                <span style="font-size: 12px"><b><?= $_SESSION['candidato']->getNome() ?></b>
-                    <a style="margin-left: 5px;" class="link-secondary text-decoration-none" href="/candidato/processaLogout">Sair</a>
-                </span>
-                <br>
-            <?php endif; ?>
+            <span style="font-size: 12px"><b><?= $_SESSION['candidato']->getNome() ?></b></span>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,6 +38,23 @@
                         </li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fas fa-user-circle"></i> Minha conta
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li>
+                            <a class="dropdown-item" href="/candidato/editar ?>">Editar</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="/candidato/trocarSenha">Trocar a senha</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="/candidato/processaLogout">Sair</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
