--- a/web/layouts/sistema/cabecalho.phtml
+++ b/web/layouts/sistema/cabecalho.phtml
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ce211dcce0.js" crossorigin="anonymous"></script>
-    <link href="/assets/css/sistema.css" rel="stylesheet" />
+    <link href="/assets/css/sistema.css" rel="stylesheet"/>
     <style>
         .notification {
             margin-top: 10px;
@@ -17,7 +17,7 @@
     </style>
 </head>
 
-<body  class="d-flex flex-column min-vh-100">
+<body class="d-flex flex-column min-vh-100">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
     <div class="container-fluid">
         <a class="navbar-brand logo" href="/autenticacao"></a>
@@ -56,11 +56,12 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li>
                             <a class="dropdown-item" href="/filial/cadastrar">Cadastrar</a>
-                        </li> 
+                        </li>
                         <li>
                             <a class="dropdown-item" href="/filial/listar">Listar</a>
-                        </li> 
-                    </ul>  
+                        </li>
+                    </ul>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-users"></i> Usuários
@@ -89,7 +90,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas "></i> Habilidades
+                        <i class="fas fa-check-circle "></i> Habilidades
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li>
