--- a/web/views/empresa/editar.phtml
+++ b/web/views/empresa/editar.phtml
@@ -1,44 +1,45 @@
 <div class="container container-sm w-75">
     <form method="post" action="/empresa/processaEditar">
         <div class="row gy-3 gy-md-4 overflow-hidden mb-2">
-            <label for="nome" class="form-label text-end align-content-end col-2">Nome <span class="text-danger">*</span></label>
-            <div class="col-4">
-                <input type="text" readonly class="form-control form-control-plaintext text-muted" name="nome" id="nome" placeholder="Nome da empresa" required value="<?= $_SESSION['usuario']->getEmpresa()->getNome() ?>">
+            <div class="col-md-6 form-floating">
+                <input type="text" readonly class="form-control form-control-plaintext text-muted" name="nome" id="nome" required value="<?= $_SESSION['usuario']->getEmpresa()->getNome() ?>">
+                <label for="nome" class="form-label">Nome
+                    <span class="text-danger">*</span></label>
             </div>
-            <label for="cnpj" class="form-label text-end align-content-end col-2">CNPJ <span class="text-danger">*</span></label>
-            <div class="col-4">
-                <input type="text" readonly class="form-control form-control-plaintext text-muted" name="cnpj" id="cnpj" placeholder="CNPJ" required value="<?= $_SESSION['usuario']->getEmpresa()->getCNPJ() ?>">
-            </div>
-        </div>
-        <div class="row gy-3 gy-md-4 overflow-hidden mb-2">
-            <label for="email" class="form-label text-end align-content-end col-2">E-mail <span class="text-danger">*</span></label>
-            <div class="col-10">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Informe um email válido" required value="<?= $_SESSION['usuario']->getEmpresa()->getEmail() ?>">
+            <div class="col-md-6 form-floating">
+                <input type="text" readonly class="form-control form-control-plaintext text-muted" name="cnpj" id="cnpj" required value="<?= $_SESSION['usuario']->getEmpresa()->getCNPJ() ?>">
+                <label for="cnpj" class="form-label">CNPJ
+                    <span class="text-danger">*</span></label>
             </div>
         </div>
         <div class="row gy-3 gy-md-4 overflow-hidden mb-2">
-            <label for="descricao" class="form-label text-end align-content-start col-2">Descrição <span class="text-danger">*</span></label>
-            <div class="col-10">
-                <textarea class="form-control" name="descricao" id="descricao" placeholder="Descrição" required><?= $_SESSION['usuario']->getEmpresa()->getDescricao() ?></textarea>
+            <div class="col-md-12 form-floating">
+
+                <input type="email" class="form-control" name="email" id="email" required value="<?= $_SESSION['usuario']->getEmpresa()->getEmail() ?>">
+                <label for="email" class="form-label">E-mail
+                    <span class="text-danger">*</span></label>
             </div>
         </div>
         <div class="row gy-3 gy-md-4 overflow-hidden mb-2">
-            <label for="logo" class="form-label text-end align-content-end col-2">Logo <span class="text-danger">*</span></label>
-            <div class="col-10">
-                <input type="text" class="form-control" name="logo" id="logo" placeholder="Adicione uma imagem" required value="<?= $_SESSION['usuario']->getEmpresa()->getLogo() ?>">
+            <div class="col-md-12 form-floating">
+                <textarea class="form-control" name="descricao" id="descricao" required><?= $_SESSION['usuario']->getEmpresa()->getDescricao() ?></textarea>
+                <label for="descricao" class="form-label ">Descrição
+                    <span class="text-danger">*</span></label>
             </div>
         </div>
         <div class="row gy-3 gy-md-4 overflow-hidden mb-2">
-            <label for="endereco" class="form-label text-end align-content-end col-2">Endereço
-                <span class="text-danger">*</span></label>
-            <div class="col-10">
-                <input type="text" class="form-control" name="endereco" id="endereco" placeholder="Digite o endereço atual" required value="<?= $_SESSION['usuario']->getEmpresa()->getEndereco() ?>">
+            <div class="col-md-12 form-floating">
+                <input type="text" class="form-control" name="logo" id="logo" required value="<?= $_SESSION['usuario']->getEmpresa()->getLogo() ?>">
+                <label for="logo" class="form-label">Logo
+                    <span class="text-danger">*</span></label>
             </div>
         </div>
         <div class="row gy-3 gy-md-4 overflow-hidden mb-2">
             <div class="col-12">
                 <div class="d-grid">
-                    <button class="btn btn-primary" type="submit"><i class="fas fa-save"></i> Salvar</button>
+                    <button class="btn btn-primary" type="submit">
+                        <i class="fas fa-save"></i> Salvar
+                    </button>
                 </div>
             </div>
         </div>
