--- a/web/views/filial/listar.phtml
+++ b/web/views/filial/listar.phtml
@@ -1,14 +1,20 @@
 <table class="table table-bordered table-striped table-hover caption-top">
     <caption>Minhas Filiais</caption>
     <thead>
-        <tr>
-            <th>Nome</th>
-            <th class="minimal"><i class="fas fa-cog"></i></th>
-        </tr>
+    <tr>
+        <th class="minimal">#</th>
+        <th>Nome</th>
+        <th class="minimal">
+            <i class="fas fa-cog"></i>
+        </th>
+    </tr>
     </thead>
     <tbody>
-    <?php foreach ($filiais as $filial) : ?>
+    <?php
+    /** @var array<Filial> $filiais */
+    foreach ($filiais as $filial) : ?>
         <tr>
+            <td class="minimal"><?= $filial->getId() ?></td>
             <td><?= $filial->getNome() ?></td>
             <td class="minimal">
                 <a class="btn btn-primary btn-sm" href="/filial/editar?id=<?= $filial->getId() ?>" title="Editar"><i class="fas fa-edit"></i></a>
