--- a/web/views/vaga/formulario.phtml
+++ b/web/views/vaga/formulario.phtml
@@ -110,16 +110,20 @@
             </div>
         </div>
         <div class="row g-3 align-items-center mb-2">
-            <label class="col-form-label">Habilidades</label>
+            <div class="col-12 d-flex justify-content-between align-items-center">
+                <label class="col-form-label col-md-2">Habilidades</label>
+                <div class="input-group w-25 ms-3">
+                    <span class="input-group-text"><i class="fas fa-search"></i></span>
+                    <input type="text" id="searchInput" class="form-control" placeholder="Filtrar habilidades...">
+                </div>
+            </div>
             <?php /** @var array<Habilidade> $habilidades */
             foreach ($habilidades as $habilidade) : ?>
-                <div class="col-3 mb-3" style="text-wrap: nowrap;" title="<?= $habilidade->getHabilidade() ?>">
+                <div class="col-3 mb-3 habilidade-item" style="text-wrap: nowrap;" title="<?= $habilidade->getHabilidade() ?>">
                     <input type="checkbox" class="form-check-input" name="habilidade[]" id="habilidade_<?= $habilidade->getId() ?>" value="<?= $habilidade->getId() ?> "<?= !empty($vaga) && $vaga->temHabilidadeId($habilidade->getId()) ? 'checked' : '' ?>>
                     <label class="form-check-label ms-1 text-truncate" style="max-width: 80%;" for="habilidade_<?= $habilidade->getId() ?>"><?= $habilidade->getHabilidade() ?></label>
                 </div>
-
             <?php endforeach; ?>
-
         </div>
         <div class="row gy-3 gy-md-4 overflow-hidden mt-4 mb-2">
             <div class="col-12">
@@ -176,3 +180,21 @@
         </table>
     <?php endif; ?>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        document.getElementById('searchInput').addEventListener('keyup', function () {
+            let searchTerm = this.value.toLowerCase();
+            let items = document.querySelectorAll('.habilidade-item');
+
+            items.forEach(function (item) {
+                let label = item.querySelector('label').textContent.toLowerCase();
+                if (label.includes(searchTerm)) {
+                    item.style.display = '';
+                } else {
+                    item.style.display = 'none';
+                }
+            });
+        });
+    });
+</script>
